@@ -31,7 +31,7 @@ Added
 Changed
 ~~~~~~~
 
-- Initial support for Qt 5.15.3
+- Initial support for Qt 5.15.3 and PyQt 5.15.3
 - The `colors.webpage.prefers_color_scheme_dark` setting got renamed to
   `colors.webpage.preferred_color_scheme` and now takes the values `auto`, `light`
   and `dark` (instead of being `True` for dark and `False` for auto).
@@ -43,6 +43,9 @@ Changed
   versions of QtWebEngine/PyQtWebEngine/Qt.
   This change also prepares qutebrowser for QtWebEngine 5.15.3, which will get
   released without an updated Qt.
+- When PyQtWebEngine >= 5.15.3 is installed via `pip` (as is e.g. the case with
+  `mkvenv.py`), qutebrowser now queries the associated metadata to find out the
+  QtWebEngine version.
 
 Fixed
 ~~~~~
